syntax = "proto3";

package com.example;

import "data.proto";

service Movies {
  rpc ListMovies (ListMoviesRequest) returns (ListMoviesResponse) {}
  rpc GetMovie (GetMovieRequest) returns (GetMovieResponse) {}
  rpc BatchGetMovies (BatchGetMoviesRequest) returns (BatchGetMoviesResponse) {}
  rpc CreateMovie (CreateMovieRequest) returns (CreateMovieResponse) {}
  rpc DeleteMovie (DeleteMovieRequest) returns (DeleteMovieResponse) {}
  rpc GetCastForMovie(GetCastForMovieRequest) returns (GetCastForMovieResponse) {}
}

message ListMoviesRequest {
  int32 limit = 1;
  string cursor = 2;
}

message ListMoviesResponse {
  repeated Movie movies = 1;
  string cursor = 2;
}

message GetMovieRequest {
  string id = 1;
}

message GetMovieResponse {
  Movie movie = 1;
}

message BatchGetMoviesRequest {
  repeated string ids = 1;
}

message BatchGetMoviesResponse {
  repeated Movie movies = 2;
}

message CreateMovieRequest {
  Movie movie = 1;
}

message CreateMovieResponse {
  Movie movie = 1;
}

message DeleteMovieRequest {
  string id = 1;
}

message DeleteMovieResponse {
  bool deleted = 1;
}

message GetCastForMovieRequest {
  string movie_id = 1;
  int32 first = 2;
  string after = 3;
}

message GetCastForMovieResponse {
  repeated Person cast = 1;
  string cursor = 2;
}
